--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/RKaseman/liri-node-app/issues"
   },
-  "homepage": "https://github.com/RKaseman/liri-node-app#readme"
+  "homepage": "https://github.com/RKaseman/liri-node-app#readme",
+  "dependencies": {
+    "bandsintown-events": "^1.0.4",
+    "dotenv": "^6.0.0",
+    "moment": "^2.22.2",
+    "node-spotify-api": "^1.0.7",
+    "request": "^2.88.0"
+  }
 }
